RESOLVED FIXED215486
(WK2 only) Gamepad mapping stops being reported as “standard” in new tabs
https://bugs.webkit.org/show_bug.cgi?id=215486
Summary (WK2 only) Gamepad mapping stops being reported as “standard” in new tabs
Brady Eidson
Reported 2020-08-13 19:07:22 PDT
(WK2 only) gamepad mapping stops being reported as “standard” in new tabs There was code for gamepad events to separate "full gamepaddata" and "condensed gamepaddata" for IPC efficiency that was causing this. In reality, that code was a premature optimization. The button and axis data from a standard gamepad is larger than the mapping and id data. Let's just always send all data across the pipe. <rdar://problem/66946505>
Attachments
Patch (11.88 KB, patch)
2020-08-13 19:12 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2020-08-13 19:12:01 PDT
EWS
Comment 2 2020-08-13 22:01:55 PDT
Committed r265644: <https://trac.webkit.org/changeset/265644> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406564 [details].
Note You need to log in before you can comment on or make changes to this bug.